cambios de nombre a rut

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,13 +10,11 @@
         <ion-item>
           <!-- Texto del label -->
           <ion-label>Usuario</ion-label>
-          <!-- Nombre del input -->
-          <ion-input formControlName="nombre"></ion-input>
+          <ion-input formControlName="rut"></ion-input>
         </ion-item>
         <ion-item>
           <!-- Texto del label -->
           <ion-label>Password</ion-label>
-          <!-- Nombre del input, es del tipo password-->
           <ion-input formControlName="password" type="password"></ion-input>
         </ion-item>
       </form>
