--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -16,7 +16,7 @@
   <form [formGroup] = "formularioRegistro">
     <ion-item>
       <ion-label position="flotating">Usuario <ion-text color="danger">(Requerido)</ion-text></ion-label>
-      <ion-input formControlName = "nombre"></ion-input>
+      <ion-input formControlName = "rut"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Password</ion-label>
