--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -13,22 +13,29 @@
       <ion-card-title>Registro</ion-card-title>
     </ion-card-header>
   <ion-card-content>
-  <form [formGroup] = "formularioRegistro">
+  <form [formGroup]="formularioRegistro">
     <ion-item>
-      <ion-label position="flotating">Usuario <ion-text color="danger">(Requerido)</ion-text></ion-label>
-      <ion-input formControlName = "rut"></ion-input>
+      <ion-label position="flotating">Usuario <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input formControlName="rut"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Password</ion-label>
-      <ion-input formControlName = "password" type="password"></ion-input>
+      <ion-label position="flotating">Telefono <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input formControlName="telefono"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Confirmar Password</ion-label>
-      <ion-input formControlName = "confirmar" type="password"></ion-input>
+      <ion-label position="flotating">Telefono Emergencia <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input formControlName="telefono_emergencia"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Contraseña <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input formControlName="password" type="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Confirmar Contraseña <ion-text color="danger">*</ion-text></ion-label>
+      <ion-input formControlName="confirmar" type="password"></ion-input>
     </ion-item>
   </form>
-    <ion-button (click) = "guardar()">Registrarse</ion-button>
-
+    <ion-button (click)="guardar()">Registrarse</ion-button>
   </ion-card-content>
 </ion-card>
 </ion-content>
