--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,9 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons>
-      <ion-back-button>Volver</ion-back-button>
-    </ion-buttons>
-    <ion-title>Registro</ion-title>
+    <ion-title> Menu de Registro</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,7 +12,7 @@
   <ion-card-content>
   <form [formGroup]="formularioRegistro">
     <ion-item>
-      <ion-label position="flotating">Usuario <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="flotating">Rut <ion-text color="danger">*</ion-text></ion-label>
       <ion-input formControlName="rut"></ion-input>
     </ion-item>
     <ion-item>
